@@ -1,5 +1,15 @@
 2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
+	* sdas/asxxsrc/asdata.c,
+	  sdas/asxxsrc/asmain.c,
+	  sdas/asxxsrc/asxxxx.h:
+	  Add -h and hidden -t flags.
+	* sdas/asgb/gbadr.c,
+	  sdas/asgb/gb.h:
+	  Reduce customizations.
+
+2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
 	* src/z80/peeph.def:
 	  Improve stdlib code through peephole rules.
 
